fixed delete btn svg not showing for missions

--- a/apps/calendars/static/calendars/css/calendar.css
+++ b/apps/calendars/static/calendars/css/calendar.css
@@ -24,10 +24,6 @@ table * {
     overflow: visible;
 }
 
-.btn-mission-delete {
-    padding-left: 1em;
-}
-
 .hidden {
     display: none;
 }
